Support globs in command_path, pyjinn_import_path
E.g:

```
command_path=system/exec::packages/*/exec
pyjinn_import_path=system/pyj::packages/*/lib
```

This matches dirs of any names under "minescript/packages" for
command_path and pyjinn_import_path that have "exec" and "lib" subdirs,
respectively. E.g. "minescript/packages/foo/exec/my_script.pyj" and
"minescript/packages/foo/lib/my_lib.py", where "my_script.pyj" contains:

```
import my_lib
```

("::" in the path variables on Mac is the pair of ":" delimiters, one
before and one after the empty string which represents the "minescript"
dir itself.)